bugfix: bg video doesn't autoplay on mobiles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -112,6 +112,7 @@ body {
   .container {
     width: fit-content;
     background-color: rgba($color: #000, $alpha: 0.3);
+    z-index: 1;
   }
 }
 
@@ -120,7 +121,6 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
 }
 
 main > section {
